--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "npm install --save-dev @angular-devkit/build-angular && npm install -g @angular/cli && ng serve",
-    "build": "ng build --prod",
+    "start": "ng serve",
+    "build": "ng build --prod && ng serve",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
