--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npx ng serve",
     "build": "ng build --aot --configuration=production --base-href=/covid19-tracker/ --outputPath=dist/covid19-tracker/ --delete-output-path",
     "test": "ng test",
     "lint": "ng lint",
