--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.0.4",
     "chart.js": "^2.8.0",
     "ng2-charts": "^2.3.2",
+    "puppeteer": "^5.2.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
