--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "npm install && ng build --prod",
-    "test": "ng test --watch=false",
+    "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
